--- a/Resume10/resume10/index.html
+++ b/Resume10/resume10/index.html
@@ -56,7 +56,7 @@ clicks on it-->
   <div class="navbar">
 
   <div class="container">
-    <header class="navbar navbar-dark bg-dark text-white">
+    <header class="navbar navbar-dark bg-dark text color white">
       <ul class="nav col-12">
         <li class="nav-item"><a href="#summary" class="nav-link active" aria-current="page">Summary</a></li>
         <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
@@ -130,16 +130,16 @@ in the same row and next to exch other-->
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit corporis commodi ipsa veritatis reprehenderit, architecto consequuntur in totam esse, molestias, impedit eligendi! Adipisci assumenda voluptatum debitis cupiditate nisi iure totam.</p>
         
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Modal">
+<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#Modal">
   Call me now!
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Let's chat</h5>
+        <h5 class="modal-title" id="ModalLabel">Let's chat</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -159,7 +159,7 @@ in the same row and next to exch other-->
            <Aside class="col-sm-10">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
-                  <div class="col-md-4 bg-dark">
+                  <div class="col-md-4 py-6 py-6 bg-dark">
                     <img src="Images/skills.jpg" class="card-img" alt="skills">
                   </div>
                   <div class="col-md-8 bg-light">
